# PARKINcpp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.unix  Makefile.windows  PARKINcpp.cbp  PARKINcpp_natty32.cbp  PARKINcpp_natty64.cbp  PARKINcpp_windows.cbp  README.md  cbp2make.cfg  iv7mg_b.csv  swig_helper.bat  swig_helper.sh
addpkg/: CMakeLists.txt
addpkg/ExprEval35/: node.cpp  parser.cpp
addpkg/LIMEX4_3A/: CMakeLists.txt  HERMINE.f  LIMD.f  LIMDHERM.f  LIMDHERM_DD.f  LIMEX4_3A.f  LIMEX4_3A.h  LIMEX4_3A_Example_Big.f  LIMEX4_3A_Example_Big.out  LIMEX4_3A_Example_Small-1.out  LIMEX4_3A_Example_Small-2.out  LIMEX4_3A_Example_Small-3.out  LIMEX4_3A_Example_Small.f  LIMEX4_3_Auxiliaries.f  LIMEX4_3_Dense.f  LIMEX4_3_Size_Definitions.h  README  makefile  sLIMDHERM.f
addpkg/METAN1_A/: CMakeLists.txt  METAN1_A.h  README  makefile  metan1.f
addpkg/Ode/: CMakeLists.txt  Ode.c  Ode.html  dop853b.c  dop853b.h  dopri5.h  examples  formulc.c  formulc.h  makefile  ode.py  random.c  sum.c  sum.h
addpkg/dlib/: README.txt  revision.h
addpkg/gnuplot_cpp/: gnuplot_i.hpp
addpkg/newmat11/: include.h  newmat.h  nm_gnu.mak
common/: CMakeLists.txt  Constants.h  PARKINLog.cpp  PARKINLog.h  Types.h
doxygen/: doxyfile
doxygen/html/: BioPAR_8h_source.html  BioProcessor_8h_source.html  BioRHS_8h_source.html  BioSystem_8h_source.html  Constants_8h_source.html  DOP853_8h_source.html  ExprNode_8h_source.html  Expression_8h_source.html  GaussNewton_8h_source.html  GenericDecomp_8h_source.html  GenericMatrixImpl_8h_source.html  GenericQRPseudoInv_8h_source.html  LIMEXTrajectory_8h_source.html  LIMEX__A_8h_source.html  Matrix_8h_source.html  ODESolver_8h_source.html  ODETrajectory_8h_source.html  (+252 more)
linalg/: CMakeLists.txt  GenericDecomp.h  GenericMatrixImpl.h  GenericQRPseudoInv.h  Matrix.cpp  Matrix.h  QRCholesky.cpp  QRCholesky.h  QRDecomp.cpp  QRDecomp.h  QRMoorePenrose.cpp  QRMoorePenrose.h  QRPetersWilkinson.cpp  QRPetersWilkinson.h  QRconDecomp.cpp  QRconDecomp.h  Vector.cpp  Vector.h  dlibMatrixImpl.h
link2BioPARKIN/: parkincpp
nonlin/: CMakeLists.txt  GaussNewton.cpp  GaussNewton.h  MultipleShootingGN.cpp  MultipleShootingGN.h  UserFunc.cpp  UserFunc.h  YeOldeParkinCore.cpp  YeOldeParkinCore.h
odelib/: CMakeLists.txt  CubicHermiteTrajectory.cpp  CubicHermiteTrajectory.h  DOP853.cpp  DOP853.h  FirstOrderODESystem.h  LIMEXTrajectory.cpp  LIMEXTrajectory.h  LIMEX_A.cpp  LIMEX_A.h  LinearTrajectory.cpp  LinearTrajectory.h  METAN_A.cpp  METAN_A.h  ODESolver.h  ODETrajectory.h
swig/: CMakeLists.txt  linalg.i  nonlin.i  odelib.i  parkin.i  system.i  testbioparkin.py  testbioparkin_008.py  testbioparkin_008_logging.py  testbioparkin_aux.py  testbioparkin_aux1.py  testbioparkin_aux2.py  testbioparkin_helper.py
system/: BioMedication.cpp  BioMedication.h  BioPAR.cpp  BioPAR.h  BioProcessor.cpp  BioProcessor.h  BioRHS.cpp  BioRHS.h  BioSystem.cpp  BioSystem.h  BioSystemODE.cpp  BioSystemODE.h  BioSystemVAR.cpp  BioSystemVAR.h  CMakeLists.txt  ExprNode.cpp  ExprNode.h  Expression.cpp  Expression.h  Parser.cpp  Parser.h
tstprg/: CMakeLists.txt  main.cpp  parkin.h  testcases.h  testfoerster_react_b.cpp  testfoerster_react_c.cpp  testlinalg.cpp  testmshoot.cpp  testnonlin.cpp  testparkin_aux.cpp  testparkin_aux1.cpp  testparkin_aux2.cpp  testpfizer_simple.cpp  testsystem.cpp  testsystem_aux.cpp  testsystem_aux1.cpp  testsystem_aux2.cpp
(+22 files in other folders)
