ENABLE_LANGUAGE (Fortran)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "-c++")

SET_SOURCE_FILES_PROPERTIES(parkin.i PROPERTIES CPLUSPLUS ON)

SWIG_ADD_MODULE(parkin python parkin.i)

SWIG_LINK_LIBRARIES(parkin ${PYTHON_LIBRARIES} linalg nonlin odelib system)